Update tests to expect new vendor strings